<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Parkhaus" android:id="@+id/frameLayout2"

>
    <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="288dp"
            android:layout_height="328dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/EbenePH"
            android:id="@+id/mapParkhaus">
    </fragment>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ebene"
            android:inputType="number"
            android:ems="10"

            android:id="@+id/EbenePH" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/NummerPH"
            android:importantForAutofill="no" android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/NummerPH"
            app:layout_constraintBottom_toTopOf="@+id/PreisPH" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:importantForAutofill="no"
            android:layout_marginBottom="4dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:hint="@string/nummer"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Preis/Stunde"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/PreisPH"
            app:layout_constraintBottom_toTopOf="@+id/SchließzeitPH" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Schließt um ..."
            android:inputType="time"
            android:ems="10"
            android:id="@+id/SchließzeitPH" android:layout_marginBottom="84dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/speichern"
            android:id="@+id/ButtonPH"

            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
