<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parkScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ParkenNB" android:background="#161616">
    <TextView
            android:id="@+id/nameph"
            android:text="Parkhaus"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:visibility="visible"
            android:textColor="#1B1919"
            android:textColorLink="#00BCD4"
            android:textSize="29sp" android:background="#3BC7B5"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <fragment
            android:id="@+id/mapParkenNB"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="288dp"
            android:layout_height="328dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/nameph"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout3">
    </fragment>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="257dp"
            android:layout_height="120dp"
            android:id="@+id/linearLayout3"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:layout_marginEnd="76dp" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:background="#8FDAD6">
            <TextView
                    android:text="Zeit"
                    android:layout_width="130dp"
                    android:layout_height="40dp"

                    android:visibility="visible"
                    android:textColor="#1B1919"
                    android:textColorLink="#00BCD4"
                    android:textSize="28sp"
                    android:layout_weight="1" android:textAlignment="center"/>
            <TextView
                    android:text="Zeit"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"

                    android:visibility="visible"
                    android:textColor="#1B1919"
                    android:textColorLink="#00BCD4"
                    android:textSize="23sp"
                    android:layout_weight="1" android:textAlignment="center" android:id="@+id/zeitNB"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:background="#009688">
            <TextView
                    android:text="Kosten"
                    android:layout_width="130dp"
                    android:layout_height="40dp"

                    android:visibility="visible"
                    android:textColor="#1B1919"
                    android:textColorLink="#00BCD4"
                    android:textSize="28sp"
                    android:layout_weight="1" android:textAlignment="center"/>
            <TextView
                    android:text="Kosten"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"

                    android:visibility="visible"
                    android:textColor="#1B1919"
                    android:textColorLink="#00BCD4"
                    android:textSize="24sp"
                    android:layout_weight="1" android:textAlignment="center" android:id="@+id/kostenNB"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/unten" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:id="@+id/ebeneph"
                android:text="@string/ebene1"
                android:layout_width="133dp"
                android:layout_height="55dp"

                android:visibility="visible"
                android:textColor="#1B1919"
                android:textColorLink="#00BCD4"
                android:background="#009688"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="647dp" tools:layout_editor_absoluteX="-11dp"/>
        <TextView
                android:id="@+id/nummerph"
                android:text="@string/nummer1"
                android:layout_width="133dp"
                android:layout_height="55dp"

                android:visibility="visible"
                android:textColor="#1B1919"
                android:textColorLink="#00BCD4"
                android:background="#2BC99C"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="647dp" tools:layout_editor_absoluteX="-11dp"/>

        <TextView
                android:id="@+id/endzeitph"
                android:text="@string/schlie_zeit"
                android:layout_width="164dp"
                android:layout_height="55dp"

                android:visibility="visible"
                android:textColor="#1B1919"
                android:textColorLink="#00BCD4"
                android:background="#009688"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="702dp" tools:layout_editor_absoluteX="265dp"/>


    </LinearLayout>
    <LinearLayout app:layout_constraintBottom_toTopOf="@+id/unten" android:layout_width="match_parent"
                  android:layout_height="wrap_content" tools:layout_editor_absoluteX="0dp"
                  android:id="@+id/linearLayout">

        <TextView
                android:id="@+id/parkzeitph"
                android:text="Parkzeit:"
                android:layout_width="199dp"
                android:layout_height="35dp"
                android:gravity="center_vertical" android:textSize="18sp" android:background="#8FDAD6"

                tools:layout_editor_absoluteY="611dp" tools:layout_editor_absoluteX="55dp"/>

        <TextView
                android:id="@+id/preisph"
                android:text="Preis/Stunde:"
                android:layout_width="231dp"
                android:layout_height="35dp"
                android:gravity="center_vertical" android:textSize="18sp" android:background="#8FDAD6"

                tools:layout_editor_absoluteY="611dp" tools:layout_editor_absoluteX="55dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>